# wilhelm_renderer

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  MEMORY PERFORMANCE.md  OPENGL.md  PRIMITIVES.md  README.md  ROADMAP.md  SHAPE_API_REVIEW.md  TODO.md  build.rs
cpp/: glrenderer.cpp  glrenderer.h
cpp/freetype-2.13.2/: CMakeLists.txt
cpp/freetype-2.13.2/include/freetype/config/: ftmodule.h
docs/: ARCHITECTURE.md  DESIGN.md  PERFORMANCE.md  PRIMITIVES.md  REFERENCES.md  ROADMAP.md  SHAPE_API_REVIEW.md  TODO.md  design.md  work-log.md
examples/: camera.rs  instancing.rs  keyboard.rs  rotations.rs  shapes.rs  shapes_scaled.rs  shapes_with_zoom.rs  text.rs  transforms.rs  triangle.rs  waypoints.rs  window.rs
examples/alpha_transparency/: Cargo.toml  README.md
examples/alpha_transparency/src/: main.rs
examples/anchor_rotations/: Cargo.toml  README.md
examples/anchor_rotations/src/: main.rs
examples/bouncing_balls/: Cargo.toml  README.md
examples/bouncing_balls/src/: main.rs
examples/bouncing_balls_instanced/: Cargo.toml  README.md
examples/bouncing_balls_instanced/src/: main.rs
examples/bouncing_balls_ws_client/: Cargo.toml
examples/bouncing_balls_ws_client/src/: main.rs
examples/dashed_lines/: Cargo.toml  README.md
examples/dashed_lines/src/: main.rs
examples/instancing/: Cargo.toml  README.md
examples/instancing/src/: main.rs
examples/keyboard/: Cargo.toml  README.md
examples/markers/: Cargo.toml  README.md
examples/markers/src/: main.rs
examples/polygons/: Cargo.toml
examples/polygons/src/: main.rs
examples/rotations/: Cargo.toml  README.md
examples/rotations/src/: main.rs
examples/shapes/: Cargo.toml  README.md
examples/shapes/src/: main.rs
examples/shapes_scaled/: Cargo.toml  README.md
examples/shapes_scaled/src/: main.rs
examples/style_mutation/: Cargo.toml  README.md
examples/style_mutation/src/: main.rs
examples/text/: Cargo.toml  README.md
examples/text/src/: main.rs
examples/transforms/: Cargo.toml  README.md
examples/transforms/src/: main.rs
examples/transforms/src/shaders/: transform.frag  transform.vert
examples/triangle/: Cargo.toml  README.md
examples/triangle/src/shaders/: geometry.frag  geometry.vert
examples/waypoints/: Cargo.toml  README.md
examples/waypoints/src/: main.rs
examples/waypoints_instanced/: Cargo.toml  README.md
examples/waypoints_instanced/src/: main.rs
examples/window/: Cargo.toml  README.md
examples/window/src/: main.rs
examples/z_order/: Cargo.toml  README.md
examples/z_order/src/: main.rs
fonts/: README.md
src/core/: app.rs  camera.rs  color.rs  font.rs  geometry.rs  math.rs  mesh.rs  mod.rs  projection.rs  renderer.rs  window.rs
src/core/engine/: freetype.rs  glfw.rs  mod.rs  opengl.rs
src/graphics2d/: markers.rs  mod.rs
src/graphics2d/shaders/: dashed.frag  dashed.vert  image.vert  point.frag  shape.frag  shape.vert  text.frag  text.vert
src/graphics2d/shapes/: mod.rs  shaperenderable.rs
wilhelm_renderer_sys/: Cargo.toml
wilhelm_renderer_sys/cpp/: CMakeLists.txt  glrenderer.h
wilhelm_renderer_sys/cpp/glad/include/glad/: glad.h
wilhelm_renderer_sys/cpp/glad/src/: glad.c
wilhelm_renderer_sys/src/: freetype.rs  glfw.rs  lib.rs  opengl.rs
