[package]
name = "wilhelm_renderer"
version = "0.7.2"
edition = "2021"
authors = ["Anwar Ludin <anwar.ludin@algonents.com>"]
license = "MIT"

description = "A minimalist 2D data rendering engine"
repository = "https://github.com/algonents/wilhelm-renderer"
readme = "README.md"
keywords = ["opengl", "visualization"]
categories = ["graphics", "rendering::graphics-api"]
exclude = [
    ".idea/",
    "images/",
    "CLAUDE.md",
    "MEMORY PERFORMANCE.md",
    "OPENGL.md",
    "RADAR PRIMITIVES.md",
    "ROADMAP.md",
    "TODO.md",
]

[dependencies]
glam = "0.30.4"
image = "0.25.6"

[build-dependencies]
cmake = "0.1.52"

[[example]]
name = "keyboard"
path = "examples/keyboard.rs"
