[package]
name = "wilhelm_renderer"
version = "0.9.0"
edition = "2021"
authors = ["Anwar Ludin <anwar.ludin@algonents.com>"]
license = "MIT"

description = "A minimalist 2D graphics engine"
repository = "https://github.com/algonents/wilhelm-renderer"
readme = "README.md"
keywords = ["opengl", "visualization", "graphics2D"]
categories = ["graphics", "rendering::graphics-api"]
exclude = [
    ".idea/",
    "images/",
    "CLAUDE.md",
    "MEMORY PERFORMANCE.md",
    "OPENGL.md",
    "ROADMAP.md",
    "TODO.md",
    "examples/",
]

[dependencies]
glam = "0.30.4"
image = "0.25.6"

[build-dependencies]
cmake = "0.1.52"

[workspace]
members = [
    ".",
    "examples/alpha_transparency",
    "examples/bouncing_balls",
    "examples/bouncing_balls_instanced",
    "examples/instancing",
    "examples/keyboard",
    "examples/rotations",
    "examples/shapes",
    "examples/shapes_scaled",
    "examples/style_mutation",
    "examples/text",
    "examples/transforms",
    "examples/triangle",
    "examples/waypoints",
    "examples/waypoints_instanced",
    "examples/window",
    "examples/z_order",
]
