[package]
name = "wilhelm_renderer"
version = "0.12.0"
edition = "2021"
authors = ["Anwar Ludin <anwar.ludin@algonents.com>"]
license = "MIT"

description = "A minimalist 2D graphics engine"
repository = "https://github.com/algonents/wilhelm-renderer"
readme = "README.md"
keywords = ["opengl", "visualization", "2d", "graphics", "renderer"]
categories = ["visualization", "rendering::engine", "graphics"]
exclude = [
    ".idea/",
    "images/",
    "CLAUDE.md",
    "MEMORY PERFORMANCE.md",
    "OPENGL.md",
    "ROADMAP.md",
    "TODO.md",
    "examples/",
    # DejaVuSans is only used by examples (which are already excluded).
    # The lib test uses the much smaller ArchitectsDaughter font.
    "fonts/DejaVuSans.ttf",
]

[dependencies]
image = "0.25.6"
wilhelm_renderer_sys = { path = "wilhelm_renderer_sys", version = "=0.10.0" }

[workspace]
members = [
    ".",
    "wilhelm_renderer_sys",
    "examples/anchor_rotations",
    "examples/alpha_transparency",
    "examples/dashed_lines",
    "examples/bouncing_balls",
    "examples/bouncing_balls_instanced",
    "examples/instancing",
    "examples/polygons",
    "examples/keyboard",
    "examples/rotations",
    "examples/shapes",
    "examples/shapes_scaled",
    "examples/markers",
    "examples/style_mutation",
    "examples/text",
    "examples/transforms",
    "examples/triangle",
    "examples/waypoints",
    "examples/waypoints_instanced",
    "examples/window",
    "examples/z_order",
]
