[package]
name = "wilhelm_renderer_sys"
version = "0.9.0"
edition = "2021"
authors = ["Anwar Ludin <anwar.ludin@algonents.com>"]
license = "MIT"
description = "Native bindings and bundled GLFW/FreeType C/C++ code for wilhelm_renderer"
repository = "https://github.com/algonents/wilhelm_renderer"
keywords = ["opengl", "ffi", "glfw", "freetype"]
categories = ["external-ffi-bindings", "rendering::graphics-api"]
links = "wilhelm_renderer"

[build-dependencies]
cmake = "0.1.52"
