[package]
name = "bouncing_balls_ws_client"
version = "0.1.0"
edition = "2021"

[dependencies]
wilhelm_renderer = { path = "../.." }
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
url = "2.5"
futures-util = "0.3.31"
